--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vite-plugin-mkcert": "^1.17.8"
   }
 }
