--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.85.5",
     "axios": "^1.11.0",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2"
   },
