--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.27.7" />
+    <PackageReference Include="Resend" Version="0.1.6" />
   </ItemGroup>
 
 </Project>
